tests/baselines/reference/prototypePropertyAssignmentMergeAcrossFiles2.errors.txt
other.js(4,5): error TS2322: Type 'undefined' is not assignable to type 'One'.
other.js(5,5): error TS2339: Property 'wat' does not exist on type 'One'.
other.js(9,5): error TS2322: Type 'undefined' is not assignable to type 'Two'.
other.js(10,5): error TS2339: Property 'wat' does not exist on type 'Two'.


==== prototypePropertyAssignmentMergeAcrossFiles2.js (0 errors) ====
    var Ns = {}
    Ns.One = function() {};
    Ns.Two = function() {};
    
    Ns.One.prototype = {
      ok() {},
    };
    Ns.Two.prototype = {
    }
    
==== other.js (4 errors) ====
    /**
     * @type {Ns.One}
     */
    var one = undefined;
        ~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'One'.
    one.wat;
        ~~~
!!! error TS2339: Property 'wat' does not exist on type 'One'.
    /**
     * @type {Ns.Two}
     */
    var two = undefined;
        ~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'Two'.
    two.wat;
        ~~~
!!! error TS2339: Property 'wat' does not exist on type 'Two'.
    